syntax = "proto3";

package gldemo_output_proto;

message image {
    bytes pixels = 1; 
    uint32 size = 2; 
}

message swap_indices {
    uint32 front = 1;
    uint32 back = 2;
}

message Rendered_frame {
    image left = 1;
    image right = 2;
    swap_indices si = 3;
}